[gd_scene load_steps=10 format=3 uid="uid://cld1c4x65h2t7"]

[ext_resource type="Script" path="res://game.gd" id="1_ow7ic"]
[ext_resource type="Script" path="res://modemachine/mode_machine.gd" id="2_jdppo"]
[ext_resource type="PackedScene" uid="uid://y8f7iqc6u1vp" path="res://ui/action_selection/action_selection.tscn" id="3_2och2"]
[ext_resource type="Script" path="res://modemachine/game_modes/dungeon_mode.gd" id="3_phqrw"]
[ext_resource type="Script" path="res://modemachine/game_modes/combat_mode.gd" id="5_hwbk0"]
[ext_resource type="PackedScene" uid="uid://dpwu21k1ya0ad" path="res://dungeon/dungeon.tscn" id="5_xv7t0"]
[ext_resource type="PackedScene" uid="uid://bxcxx1ioxwp48" path="res://combat/combat.tscn" id="6_mptfh"]
[ext_resource type="Script" path="res://modemachine/mode.gd" id="7_bjpqt"]
[ext_resource type="PackedScene" uid="uid://cujtfjsy5gju1" path="res://ui/inventory/inventory_ui.tscn" id="9_oexrn"]

[node name="Game" type="Node" node_paths=PackedStringArray("action_selection_ui")]
script = ExtResource("1_ow7ic")
action_selection_ui = NodePath("Ui/ActionSelectionUi")

[node name="GameModes" type="Node" parent="." node_paths=PackedStringArray("initial_mode")]
script = ExtResource("2_jdppo")
initial_mode = NodePath("DungeonMode")

[node name="CombatMode" type="Node" parent="GameModes"]
script = ExtResource("5_hwbk0")
attached_scene = ExtResource("6_mptfh")

[node name="DungeonMode" type="Node" parent="GameModes" node_paths=PackedStringArray("attached_node")]
script = ExtResource("3_phqrw")
attached_scene = ExtResource("5_xv7t0")
attached_node = NodePath("../../Dungeon")

[node name="UiModes" type="Node" parent="." node_paths=PackedStringArray("initial_mode")]
script = ExtResource("2_jdppo")
initial_mode = NodePath("ActionSelectionMode")

[node name="ActionSelectionMode" type="Node" parent="UiModes" node_paths=PackedStringArray("attached_node")]
script = ExtResource("7_bjpqt")
attached_node = NodePath("../../Ui/ActionSelectionUi")

[node name="InventoryMode" type="Node" parent="UiModes" node_paths=PackedStringArray("attached_node")]
script = ExtResource("7_bjpqt")
attached_node = NodePath("../../Ui/InventoryUi")

[node name="Ui" type="CanvasLayer" parent="."]

[node name="ActionSelectionUi" parent="Ui" instance=ExtResource("3_2och2")]

[node name="InventoryUi" parent="Ui" instance=ExtResource("9_oexrn")]

[node name="Dungeon" parent="." instance=ExtResource("5_xv7t0")]
